--- a/circle.yml
+++ b/circle.yml
@@ -19,8 +19,9 @@ test:
     - docker run --name ml -d -p 8000:8000 -p 8001:8001 -p 8002:8002 -p 8200:8200 $ML9_DOCKER_IMAGE
     - sleep 10
     - git lfs env
-    - ./gradlew :core:mlInit -PmlHost=localhost --info
-    - ./gradlew :core:mlInstallAdmin -PmlHost=localhost -PmlAdminPassword=admin -PmlAdminUsername=admin --info
+    - docker exec -it ml init-marklogic
+    - pwd
+    - chmod +x gradlew
     - ./gradlew :core:mlDeploy -PmlHost=localhost --info
     - ./gradlew test --info
 
