--- a/circle.yml
+++ b/circle.yml
@@ -17,9 +17,9 @@ dependencies:
 test:
   override:
     - docker run --name ml -d -p 8000:8000 -p 8001:8001 -p 8002:8002 -p 8200:8200 $ML9_DOCKER_IMAGE
+    - sudo lxc-attach -n "$(docker inspect --format "{{.Id}}" $ML9_DOCKER_IMAGE)" -- bash -c init-marklogic
     - sleep 10
     - git lfs env
-    - docker exec -it ml init-marklogic
     - pwd
     - chmod +x gradlew
     - ./gradlew :core:mlDeploy -PmlHost=localhost --info
