--- a/circle.yml
+++ b/circle.yml
@@ -18,6 +18,7 @@ test:
   override:
     - docker run --name ml -d -p 8000:8000 -p 8001:8001 -p 8002:8002 -p 8200:8200 $ML9_DOCKER_IMAGE
     - sleep 10
+    - sudo lxc-attach -n "$(docker inspect --format "{{.Id}}" $ML9_DOCKER_IMAGE)" -- bash -c /etc/init.d/MarkLogic start
     - git lfs env
     - pwd
     - chmod +x gradlew
