--- a/core/build.gradle
+++ b/core/build.gradle
@@ -10,6 +10,11 @@ ext {
     mlAppConfig {
         createTriggersDatabase = false
     }
+
+    mlInstallAdmin {
+        adminUsername = "admin"
+        adminPassword = "admin"
+    }
 }
 
 task deployMarkLogicJobRepository(type: JavaExec) {
