--- a/samples/src/test/resources/job.properties
+++ b/samples/src/test/resources/job.properties
@@ -1,4 +1,4 @@
-marklogic.host=localhost
+marklogic.host=grover.localdomain
 marklogic.port=8200
 marklogic.username=admin
 marklogic.password=admin
