Add docs for sample project

--- a/build.gradle
+++ b/build.gradle
@@ -174,6 +174,8 @@ project(':samples') {
     }
 
     mainClassName = "org.springframework.batch.core.launch.support.CommandLineJobRunner"
+    //mainClassName = "com.marklogic.spring.batch.Main"
+    applicationName = "samples"
 }
 
 
