--- a/build.gradle
+++ b/build.gradle
@@ -57,10 +57,12 @@ subprojects {
     }
 
     dependencies {
+        compile 'ch.qos.logback:logback-classic:1.1.8'
+        compile 'org.slf4j:slf4j-api:1.7.21'
         compile "org.springframework.batch:spring-batch-core:$springVersion"
         compile "com.marklogic:java-client-api:4.0.0-EA3"
         compile "com.marklogic:ml-javaclient-util:2.11.0"
-        compile 'org.slf4j:slf4j-api:1.7.21'
+
         testCompile "org.springframework.batch:spring-batch-test:$springVersion"
         testCompile "com.marklogic:ml-junit:2.6.0"
 }
