Remove git-lfs calls from circle config, version 0.10.1

--- a/build.gradle
+++ b/build.gradle
@@ -112,7 +112,7 @@ subprojects {
 project(':core') {
 
     dependencies {
-
+        compile project(':infrastructure')
         // Used by ML Job Repo implementation; depends on DataFieldMaxValueIncrementer
         compile "org.springframework:spring-jdbc:4.2.6.RELEASE"
 
