--- a/build.gradle
+++ b/build.gradle
@@ -163,37 +163,6 @@ project(":infrastructure") {
 
 }
 
-project(":rdf") {
-    description = 'MarkLogic Spring Batch Infrastructure: Triples'
-    dependencies {
-        // For importing RDF
-        compile('org.apache.jena:jena-arq:2.13.0') {
-            exclude(group: 'org.slf4j')
-            exclude(group: 'ch.qos.logback')
-            exclude(group: 'log4j')
-        }
-        compile('org.apache.jena:jena-core:2.13.0') {
-            exclude(group: 'org.slf4j')
-            exclude(group: 'xerces')
-            exclude(group: 'commons-cli')
-        }
-        compile('com.hp.hpl.jena:jena:2.6.4') {
-            exclude(group: 'org.slf4j')
-        }
-        compile('com.marklogic:marklogic-jena:1.0.0'){
-            changing=true
-            exclude(group: 'org.slf4j')
-            exclude(group: 'log4j')
-            exclude(group: 'ch.qos.logback')
-        }
-
-        compile "org.springframework:spring-jdbc:4.3.7.RELEASE"
-
-        testCompile project(':test')
-    }
-
-}
-
 project(':test') {
     dependencies {
         compile project(':infrastructure')
@@ -230,4 +199,43 @@ project(':samples') {
     applicationName = "samples"
 }
 
+project(":rdf") {
+    description = 'MarkLogic Spring Batch Infrastructure: Triples'
+    dependencies {
+        // For importing RDF
+        compile('org.apache.jena:jena-arq:2.13.0') {
+            exclude(group: 'org.slf4j')
+            exclude(group: 'ch.qos.logback')
+            exclude(group: 'log4j')
+        }
+        compile('org.apache.jena:jena-core:2.13.0') {
+            exclude(group: 'org.slf4j')
+            exclude(group: 'xerces')
+            exclude(group: 'commons-cli')
+        }
+        compile('com.hp.hpl.jena:jena:2.6.4') {
+            exclude(group: 'org.slf4j')
+        }
+        compile('com.marklogic:marklogic-jena:1.0.0'){
+            changing=true
+            exclude(group: 'org.slf4j')
+            exclude(group: 'log4j')
+            exclude(group: 'ch.qos.logback')
+        }
 
+        compile "org.springframework:spring-jdbc:4.3.7.RELEASE"
+
+        testCompile project(':test')
+    }
+
+}
+
+project (':shapefiles') {
+
+    dependencies {
+        compile "org.apache.httpcomponents:httpmime:4.5.2"
+        compile project(':infrastructure')
+        testCompile project(':test')
+    }
+
+}
