--- a/build.gradle
+++ b/build.gradle
@@ -181,7 +181,8 @@ project(':samples') {
         compile project(':core')
         compile project(':infrastructure')
         testCompile project(':test')
-        compile "org.apache.opennlp:opennlp-tools:1.6.0"
+        // For importing images
+        compile "org.apache.tika:tika-parsers:1.13"
     }
 
     distributions {
