--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ artifactId=
 
 # Configuration for the test app
 # Both core and jobs tests are run against this application
-mlHost=localhost
+mlHost=oscar
 mlAppName=marklogic-spring-batch-test
 mlJobRepositoryName=marklogic-spring-batch-test
 mlRestPort=8200
