--- a/core/build.gradle
+++ b/core/build.gradle
@@ -8,8 +8,8 @@ jar {
 
 task deployMarkLogicJobRepository(type: JavaExec) {
     classpath = sourceSets.main.runtimeClasspath
-    main = 'com.marklogic.spring.batch.Main'
-    args = ["--deploy_job_repo", "--jr_name", mlJobRepositoryName, "--jr_host", mlHost, "--jr_port", mlRestPort, "--jr_username", mlManageUsername, "--jr_password", mlManagePassword]
+    main = 'com.marklogic.spring.batch.DeployMarkLogicJobRepository'
+    args = ["--name", mlJobRepositoryName, "--host", mlHost, "--port", mlRestPort, "--username", mlManageUsername, "--password", mlManagePassword]
 }
 
 task undeployMarkLogicJobRepository(type: JavaExec) {
