Create new dependency injection file that allows a developer to inject a MarkLogicJobRepo #220

--- a/samples/src/test/resources/job.properties
+++ b/samples/src/test/resources/job.properties
@@ -1,7 +1,13 @@
-marklogic.host=localhost
+marklogic.host=oscar
 marklogic.port=8200
 marklogic.username=admin
 marklogic.password=admin
 
 marklogic.name=marklogic-spring-batch-test-content
 mlJobRepositoryName=marklogic-spring-batch-test-content
+
+marklogic.jobrepo.enabled=true
+marklogic.jobrepo.host=oscar
+marklogic.jobrepo.port=8200
+marklogic.jobrepo.username=admin
+marklogic.jobrepo.password=admin
