Change to localhost

--- a/samples/src/test/resources/job.properties
+++ b/samples/src/test/resources/job.properties
@@ -7,7 +7,7 @@ marklogic.name=marklogic-spring-batch-test-content
 mlJobRepositoryName=marklogic-spring-batch-test-content
 
 marklogic.jobrepo.enabled=true
-marklogic.jobrepo.host=oscar
+marklogic.jobrepo.host=localhost
 marklogic.jobrepo.port=8200
 marklogic.jobrepo.username=admin
 marklogic.jobrepo.password=admin
