--- a/build.gradle
+++ b/build.gradle
@@ -119,6 +119,8 @@ project(':core') {
         // For the CLI
         compile "net.sf.jopt-simple:jopt-simple:5.0.1"
 
+        testCompile project(":test")
+
         runtime "org.springframework.batch:spring-batch-core:$springVersion"
 
         //com.marklogic.spring.batch.Main extends com.marklogic.client.helper.LoggingObject
@@ -134,6 +136,8 @@ project(':core') {
 project(":infrastructure") {
     description = 'MarkLogic Spring Batch Infrastructure'
     dependencies {
+        compile project(":core")
+
         compile "org.springframework:spring-jdbc:4.3.7.RELEASE"
         compile "org.apache.commons:commons-lang3:3.5"
         testCompile project(':test')
