--- a/build.gradle
+++ b/build.gradle
@@ -178,9 +178,16 @@ project(':samples') {
         baseName = "samples"
     }
 
-    mainClassName = "org.springframework.batch.core.launch.support.CommandLineJobRunner"
-    //mainClassName = "com.marklogic.spring.batch.Main"
+    mainClassName = "com.marklogic.spring.batch.core.launch.support.CommandLineJobRunner"
+
     applicationName = "samples"
+
+    task runYourJob(type: JavaExec) {
+        main = 'com.marklogic.spring.batch.core.launch.support.CommandLineJobRunner'
+        classpath = sourceSets.main.runtimeClasspath
+        args = ["--job_path", "com.marklogic.spring.batch.samples.JobsConfig",
+                "--job_id", "yourJob"]
+    }
 }
 
 project(':mlJobRepo') {
