#233 Upgrade to ml-gradle, ml-junit, ml-app-deployer, ml-java-client-util.  Also upgrade to latest Spring library versions

--- a/core/src/test/resources/job.properties
+++ b/core/src/test/resources/job.properties
@@ -1,10 +1,10 @@
-marklogic.host=localhost
+marklogic.host=oscar
 marklogic.port=8200
 marklogic.username=admin
 marklogic.password=admin
 marklogic.database=marklogic-spring-batch-test-content
 
-marklogic.jobrepo.host=localhost
+marklogic.jobrepo.host=oscar
 marklogic.jobrepo.port=8200
 marklogic.jobrepo.username=admin
 marklogic.jobrepo.password=admin
