--- a/samples/src/test/resources/job.properties
+++ b/samples/src/test/resources/job.properties
@@ -1,10 +1,10 @@
-marklogic.host=oscar
+marklogic.host=localhost
 marklogic.port=8200
 marklogic.username=admin
 marklogic.password=admin
 marklogic.database=marklogic-spring-batch-test-content
 
-marklogic.jobrepo.host=oscar
+marklogic.jobrepo.host=localhost
 marklogic.jobrepo.port=8200
 marklogic.jobrepo.username=admin
 marklogic.jobrepo.password=admin
