--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,7 @@ subprojects {
 
     apply plugin: "java"
 
-    if (it.name in ["core", "infrastructure", "test"]) {
+    if (it.name in ["core", "infrastructure", "test", "http"]) {
         apply plugin: "com.jfrog.bintray"
         apply plugin: 'maven-publish'
     }
@@ -76,7 +76,7 @@ subprojects {
         toolVersion = '7.1.2'
     }
 
-    if (it.name in ["core", "infrastructure", "test"])  {
+    if (it.name in ["core", "infrastructure", "test", "http"])  {
         task sourcesJar(type: Jar, dependsOn: classes) {
             baseName = artifactId
             version = project.version
