Add log4j dependency

--- a/build.gradle
+++ b/build.gradle
@@ -61,8 +61,10 @@ subprojects {
     }
 
     dependencies {
+        compile 'org.slf4j:slf4j-api:1.7.25'
+        compile "org.slf4j:log4j-over-slf4j:1.7.25"
         compile "org.apache.logging.log4j:log4j-api:2.9.1"
-        compile 'org.slf4j:slf4j-api:1.7.21'
+
         compile "org.springframework.batch:spring-batch-core:$springBatchVersion"
         compile "com.marklogic:marklogic-client-api:4.0.2"
         compile "com.marklogic:ml-javaclient-util:3.0.0"
