--- a/http/build.gradle
+++ b/http/build.gradle
@@ -1,6 +1,8 @@
 dependencies {
     compile "org.springframework:spring-web:${springVersion}"
-    testCompile "org.springframework:spring-test:5.0.0.RELEASE"
+    compile "org.springframework.batch:spring-batch-core:$springBatchVersion"
+    compile "org.jdom:jdom2:2.0.6"
+    testCompile "org.springframework:spring-test:${springVersion}"
 }
 
 bintray {
