--- a/shapefiles/build.gradle
+++ b/shapefiles/build.gradle
@@ -1,5 +1,5 @@
 dependencies {
     compile "org.apache.httpcomponents:httpmime:4.5.2"
-    compile "org.springframework.batch:spring-batch-core:$springBatchVersion"
+    compile project(':infrastructure')
     testCompile project(':test')
 }
