--- a/build.gradle
+++ b/build.gradle
@@ -55,8 +55,8 @@ subprojects {
     }
 
     dependencies {
-        compile 'org.slf4j:slf4j-api:1.7.25'
-        compile "org.slf4j:log4j-over-slf4j:1.7.25"
+        compile "org.slf4j:slf4j-api:1.7.25"
+        compile "org.slf4j:slf4j-log4j12:1.7.25"
         compile "org.apache.logging.log4j:log4j-api:2.9.1"
 
         testCompile "junit:junit:4.12"
