--- a/rdbms/build.gradle
+++ b/rdbms/build.gradle
@@ -2,33 +2,13 @@ apply plugin: "com.jfrog.bintray"
 
 dependencies {
     compile "org.springframework.batch:spring-batch-core:$springBatchVersion"
+    compile "org.springframework:spring-jdbc:$springVersion"
 
-    // For importing RDF
-    compile('org.apache.jena:jena-arq:2.13.0') {
-        exclude(group: 'org.slf4j')
-        exclude(group: 'ch.qos.logback')
-        exclude(group: 'log4j')
-    }
-    compile('org.apache.jena:jena-core:2.13.0') {
-        exclude(group: 'org.slf4j')
-        exclude(group: 'xerces')
-        exclude(group: 'commons-cli')
-    }
-    compile('com.hp.hpl.jena:jena:2.6.4') {
-        exclude(group: 'org.slf4j')
-    }
-    compile('com.marklogic:marklogic-jena:1.0.0'){
-        changing=true
-        exclude(group: 'org.slf4j')
-        exclude(group: 'log4j')
-        exclude(group: 'ch.qos.logback')
-    }
-
-    testCompile project(':test')
+    runtime "org.springframework.batch:spring-batch-core:$springBatchVersion"
 }
 
 ext {
-    artifact = "spring-batch-rdf"
+    artifact = "spring-batch-rdbms"
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
