--- a/infrastructure/src/test/resources/log4j.properties
+++ b/infrastructure/src/test/resources/log4j.properties
@@ -8,3 +8,4 @@ log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 log4j.appender.A1.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
 
 log4j.logger.com.marklogic.client=WARN
+log4j.logger.com.marklogic.client.ext.batch=DEBUG
