--- a/rdf/build.gradle
+++ b/rdf/build.gradle
@@ -1,4 +1,4 @@
-apply plugin: "com.jfrog.bintray"
+//apply plugin: "com.jfrog.bintray"
 
 dependencies {
     compile "org.springframework.batch:spring-batch-core:${springBatchVersion}"
