--- a/core/build.gradle
+++ b/core/build.gradle
@@ -26,6 +26,10 @@ ext {
     artifact = "marklogic-spring-batch-core"
 }
 
+javadoc {
+    destinationDir = new File("../sastafford.github.io/marklogic-spring-batch/javadoc/core")
+}
+
 task sourcesJar(type: Jar, dependsOn: classes) {
     baseName = artifactId
     version = project.version
