--- a/test/build.gradle
+++ b/test/build.gradle
@@ -14,6 +14,10 @@ dependencies {
     compile "com.marklogic:ml-app-deployer:3.2.0"
 }
 
+javadoc {
+    destinationDir = new File("../sastafford.github.io/marklogic-spring-batch/javadoc/test")
+}
+
 task sourcesJar(type: Jar, dependsOn: classes) {
     baseName = artifact
     version = project.version
