--- a/infrastructure/build.gradle
+++ b/infrastructure/build.gradle
@@ -1,16 +1,16 @@
 apply plugin: "com.jfrog.bintray"
 
 dependencies {
-    compile "org.springframework.batch:spring-batch-core:$springBatchVersion"
+    compile "org.springframework.batch:spring-batch-core:${springBatchVersion}"
     compile "com.marklogic:marklogic-client-api:4.0.3"
     compile "com.marklogic:ml-javaclient-util:3.2.0"
     compile "org.apache.commons:commons-lang3:3.5"
 
-    testCompile "org.springframework.batch:spring-batch-test:$springBatchVersion"
+    testCompile "org.springframework.batch:spring-batch-test:${springBatchVersion}"
     testCompile "com.marklogic:ml-junit:3.0.0"
     testCompile project(":test")
 
-    runtime "org.springframework.batch:spring-batch-core:$springBatchVersion"
+    runtime "org.springframework.batch:spring-batch-core:${springBatchVersion}"
     runtime "net.sf.jopt-simple:jopt-simple:5.0.1"
 }
 
