#280 - consolidate core and infrastructure packages, remove infrastructure

--- a/core/src/test/resources/job.properties
+++ b/core/src/test/resources/job.properties
@@ -1,3 +1,9 @@
+marklogic.host=localhost
+marklogic.port=8200
+marklogic.username=admin
+marklogic.password=admin
+marklogic.database=msb-content
+
 marklogic.jobrepo.host=localhost
 marklogic.jobrepo.port=8201
 marklogic.jobrepo.username=admin
