--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,15 +1,13 @@
 apply plugin: "com.jfrog.bintray"
 
 dependencies {
-    //core doesn't depend on infrastructure but want to grab both jars when importing MSB
-    compile project(":infrastructure")
-
     // For the CommandLineInterface main program
     compile "net.sf.jopt-simple:jopt-simple:5.0.1"
 
     compile "org.springframework.batch:spring-batch-core:$springBatchVersion"
     compile "com.marklogic:marklogic-client-api:4.0.3"
     compile "com.marklogic:ml-javaclient-util:3.2.0"
+    compile "org.apache.commons:commons-lang3:3.5"
 
     testCompile "org.springframework.batch:spring-batch-test:$springBatchVersion"
     testCompile "com.marklogic:ml-junit:3.0.0"
