--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,6 @@ allprojects {
 }
 
 subprojects {
-
     apply plugin: "java"
     apply plugin: "maven-publish"
     apply plugin: "idea"
@@ -56,10 +55,7 @@ subprojects {
     }
 
     dependencies {
-        compile "org.slf4j:slf4j-api:1.7.25"
-        compile "org.slf4j:slf4j-log4j12:1.7.25"
-        compile "org.apache.logging.log4j:log4j-api:2.9.1"
-
+        compile "ch.qos.logback:logback-classic:1.2.3"
         testCompile "junit:junit:4.12"
     }
 
