Add pmd check, code cleanup

--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ allprojects {
     }
 
     pmd {
-        ruleSets = ["java-basic", "java-braces", "java-unusedcode"]
+        ruleSets = ["java-basic", "java-braces", "java-unusedcode", "java-imports"]
     }
 
     checkstyle {
