--- a/core/build.gradle
+++ b/core/build.gradle
@@ -8,6 +8,9 @@ dependencies {
     compile "com.marklogic:marklogic-client-api:4.0.3"
     compile "com.marklogic:ml-javaclient-util:3.2.0"
     compile "org.apache.commons:commons-lang3:3.5"
+    compile "org.springframework:spring-jdbc:$springVersion"
+
+    compile "com.marklogic:marklogic-jena:3.0.5"
 
     testCompile "org.springframework.batch:spring-batch-test:$springBatchVersion"
     testCompile "com.marklogic:ml-junit:3.0.0"
