--- a/build.gradle
+++ b/build.gradle
@@ -62,3 +62,10 @@ subprojects {
     sourceCompatibility = 1.8
     targetCompatibility = 1.8
 }
+
+// allows makes core a dependency of rdbms
+project(':rdbms') {
+    dependencies {
+        compile project(':core')
+    }
+}
