--- a/rdf/build.gradle
+++ b/rdf/build.gradle
@@ -1,29 +1,8 @@
-//apply plugin: "com.jfrog.bintray"
+apply plugin: "com.jfrog.bintray"
 
 dependencies {
     compile "org.springframework.batch:spring-batch-core:${springBatchVersion}"
-
-    // For importing RDF
-    compile('org.apache.jena:jena-arq:2.13.0') {
-        exclude(group: 'org.slf4j')
-        exclude(group: 'ch.qos.logback')
-        exclude(group: 'log4j')
-    }
-    compile('org.apache.jena:jena-core:2.13.0') {
-        exclude(group: 'org.slf4j')
-        exclude(group: 'xerces')
-        exclude(group: 'commons-cli')
-    }
-    compile('com.hp.hpl.jena:jena:2.6.4') {
-        exclude(group: 'org.slf4j')
-    }
-    compile('com.marklogic:marklogic-jena:1.0.0'){
-        changing=true
-        exclude(group: 'org.slf4j')
-        exclude(group: 'log4j')
-        exclude(group: 'ch.qos.logback')
-    }
-
+    compile "com.marklogic:marklogic-jena:3.0.5"
     testCompile project(':test')
 }
 
@@ -54,7 +33,7 @@ publishing {
         }
     }
 }
-/*
+
 bintray {
     user = project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
     key = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_KEY')
@@ -72,4 +51,3 @@ bintray {
         }
     }
 }
-*/
